[gd_scene load_steps=33 format=3 uid="uid://d2k4pa50jyk6c"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_818dx"]
[ext_resource type="Texture2D" uid="uid://dhlv5nvqn63q3" path="res://assets/spaceship/smallfighter0006.png" id="1_beik6"]
[ext_resource type="PackedScene" uid="uid://do45ie5ikl0yd" path="res://scenes/asteroid/asteroid_2.tscn" id="2_pdaru"]
[ext_resource type="Texture2D" uid="uid://b3xoyxphhdpal" path="res://assets/spaceship/smallfighter0001.png" id="2_vet8y"]
[ext_resource type="AudioStream" uid="uid://dnt58pc41tsfj" path="res://assets/sound/main_theme_ambient_space.mp3" id="3_ejd54"]
[ext_resource type="PackedScene" uid="uid://ddq64vinps4uh" path="res://scenes/asteroid/asteroid_gray.tscn" id="3_q0303"]
[ext_resource type="Script" path="res://scenes/spaceship/CharacterBody2D.gd" id="3_swrq1"]
[ext_resource type="PackedScene" uid="uid://c0hbxxx3o8v6p" path="res://scenes/asteroid/asteroid_3.tscn" id="4_f3g5q"]
[ext_resource type="PackedScene" uid="uid://b786kxcdjn72j" path="res://scenes/laser/laser.tscn" id="4_rgdsj"]
[ext_resource type="PackedScene" uid="uid://ugbu3o4xwhvm" path="res://scenes/items/health_point.tscn" id="5_7yhvv"]
[ext_resource type="Script" path="res://scenes/main/Camera2D.gd" id="5_jq6ji"]
[ext_resource type="Texture2D" uid="uid://lli85e2lqfeh" path="res://assets/spaceship/blueships1.png" id="5_nb7sv"]
[ext_resource type="PackedScene" uid="uid://ch6em3vyfysfq" path="res://scenes/parallax/parallax_background.tscn" id="8_u8blf"]
[ext_resource type="AudioStream" uid="uid://bbbbq520lhwv3" path="res://assets/sound/laser_shoot.mp3" id="8_yn1dv"]
[ext_resource type="AudioStream" uid="uid://byl17wx5thaps" path="res://assets/sound/laser_empty.mp3" id="9_5e6nc"]
[ext_resource type="Texture2D" uid="uid://cni4j21gw5bla" path="res://assets/spaceship/smallfighter0011.png" id="12_el6m2"]
[ext_resource type="Script" path="res://scenes/asteroid_catcher/AsteroidCatcher.gd" id="13_afxbi"]
[ext_resource type="PackedScene" uid="uid://reu8rod0cl6o" path="res://scenes/explosion/explosion_0.tscn" id="15_fhfm2"]
[ext_resource type="FontFile" uid="uid://bdu0qimwbchhy" path="res://assets/fonts/Astron Boy Video.otf" id="16_jgx67"]
[ext_resource type="FontFile" uid="uid://b13fn6ov06hds" path="res://assets/fonts/Astron Boy.otf" id="17_16qda"]
[ext_resource type="PackedScene" uid="uid://d2wq76s8s0a7s" path="res://scenes/ui/health_bar.tscn" id="19_brblq"]
[ext_resource type="PackedScene" uid="uid://bea2wgh4nvhpu" path="res://scenes/ui/game_menu.tscn" id="20_ll8sj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f2t61"]
radius = 32.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cyyvq"]
radius = 24.0
height = 80.0

[sub_resource type="SpriteFrames" id="SpriteFrames_3lkte"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_beik6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vet8y")
}],
"loop": true,
"name": &"spaceleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_el6m2")
}],
"loop": true,
"name": &"spaceright",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gey2"]
size = Vector2(64, 800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84dka"]
size = Vector2(1280, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0mee"]
size = Vector2(1280, 32)

[sub_resource type="Animation" id="Animation_5tn20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Description:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Double laser = 20 points
Triple laser = 50 pooints"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Description:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rd7fm"]
resource_name = "fadein"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Description:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Double laser = 20 points
Triple laser = 50 pooints"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Description:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vd6br"]
resource_name = "fadeout"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Description:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Double laser = 20 points
Triple laser = 50 pooints"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Description:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3skar"]
_data = {
"RESET": SubResource("Animation_5tn20"),
"fadein": SubResource("Animation_rd7fm"),
"fadeout": SubResource("Animation_vd6br")
}

[node name="main" type="Node2D"]
position = Vector2(639, 719)
script = ExtResource("1_818dx")
Asteroid = ExtResource("2_pdaru")
AsteroidGray = ExtResource("3_q0303")
AsteroidBigGray = ExtResource("4_f3g5q")
HealthPoint = ExtResource("5_7yhvv")
pause_menu_path = NodePath("GameMenu/Control")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -319)
script = ExtResource("5_jq6ji")

[node name="ParallaxBackground" parent="." instance=ExtResource("8_u8blf")]

[node name="Spaceship" type="CharacterBody2D" parent="." groups=["spaceship"]]
collision_layer = 6
collision_mask = 6
script = ExtResource("3_swrq1")
Fire = ExtResource("4_rgdsj")
health_bar_path = NodePath("../UI/TextureProgressBar")

[node name="Area2D" type="Area2D" parent="Spaceship" groups=["spaceship"]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spaceship/Area2D"]
position = Vector2(1, 25)
shape = SubResource("CapsuleShape2D_f2t61")

[node name="Spaceship" type="Sprite2D" parent="Spaceship"]
position = Vector2(1, 25)
rotation = -1.57079
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_nb7sv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spaceship"]
position = Vector2(1, 25)
shape = SubResource("CapsuleShape2D_cyyvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Spaceship"]
visible = false
position = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_3lkte")
animation = &"spaceleft"

[node name="Shoot" type="AudioStreamPlayer2D" parent="Spaceship"]
stream = ExtResource("8_yn1dv")

[node name="LaserEmpty" type="AudioStreamPlayer2D" parent="Spaceship"]
stream = ExtResource("9_5e6nc")

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_ejd54")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HealthPointTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ShootCount" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 541.0
offset_top = 38.0
offset_right = 599.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("17_16qda")
theme_override_font_sizes/font_size = 20
text = "Shoots:"
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = -615.0
offset_top = 33.0
offset_right = -575.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("17_16qda")
theme_override_font_sizes/font_size = 20
text = "Score:"

[node name="LeftWall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-671, -319)
shape = SubResource("RectangleShape2D_8gey2")

[node name="RightWall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(673, -319)
shape = SubResource("RectangleShape2D_8gey2")

[node name="Bottom" type="StaticBody2D" parent="."]
light_mask = 0
visibility_layer = 0
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(1, 129)
shape = SubResource("RectangleShape2D_84dka")
debug_color = Color(0.602068, 0.0553828, 0, 0.42)

[node name="AsteroidCatcher" type="Area2D" parent="."]
script = ExtResource("13_afxbi")
Explosion_0 = ExtResource("15_fhfm2")
game_manager = NodePath("..")
pause_menu_path = NodePath("../GameMenu/Control")
health_bar_path = NodePath("../UI/TextureProgressBar")
camera_path = NodePath("../Camera2D")
player_path = NodePath("../Spaceship")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AsteroidCatcher"]
position = Vector2(1, 97)
shape = SubResource("RectangleShape2D_w0mee")

[node name="Description" type="Label" parent="."]
offset_left = -135.0
offset_top = -335.0
offset_right = 136.0
offset_bottom = -260.0
theme_override_fonts/font = ExtResource("16_jgx67")
theme_override_font_sizes/font_size = 30
text = "Double laser = 20 points
Triple laser = 50 pooints"

[node name="FadeInOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3skar")
}

[node name="Version" type="Label" parent="."]
offset_left = 585.0
offset_top = -711.0
offset_right = 630.0
offset_bottom = -688.0
theme_override_fonts/font = ExtResource("17_16qda")
text = "v0.2.0"

[node name="UI" parent="." instance=ExtResource("19_brblq")]

[node name="TextureProgressBar" parent="UI" index="0"]
offset_bottom = 24.0

[node name="GameMenu" parent="." instance=ExtResource("20_ll8sj")]
process_mode = 2

[node name="Control" parent="GameMenu" index="0"]
visible = false

[connection signal="body_entered" from="Spaceship/Area2D" to="Spaceship" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HealthPointTimer" to="." method="_on_health_point_timer_timeout"]
[connection signal="body_entered" from="AsteroidCatcher" to="AsteroidCatcher" method="_on_body_entered"]

[editable path="ParallaxBackground"]
[editable path="UI"]
[editable path="GameMenu"]
